2007-10-07 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/gsc/GSFunction.h: Declare the -getsample:: method in
	header.
	
2007-10-05 Fred Kiefer <FredKiefer@gmx.de>

	* Source/art/shfill.m (-DPSshfill:): Correct typing error. Remove
	now obsolete method declaration.
	* Headers/gsc/GSFunction.h,
	* Source/gsc/GSFunction.m: New files. Implementation of Postscript
	function taken from art/shfill.m.
	* Source/gsc/GNUmakefile: Compile new file.
	* Source/gsc/GSContext.m (-DPSshfill:), 
	* Source/gsc/GSGState.m (-DPSshfill:): Implement new method.

2007-10-05 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m (-copyWithZone:): Only use cairo 1.4
	functions when cairo version fits.
	* Source/cairo/XGCairoXImageSurface.m (-initWithDevice:): Use
	depth from window device.

2007-10-01 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGDragView.m: Add missing include.

2007-10-01 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m (-copyWithZone:): No error logging
	when copy of path fails. This is normal in cairo 1.4.10 for empty
	paths.
	
2007-09-12 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/cairo/CairoGState.h,
	* Source/cairo/CairoGState.m (-setSize, -DPSgsave, -DPSgrestore):
	Remove unused methods.
	* Headers/cairo/CairoPDFSurface.h,
	* Source/cairo/CairoPDFSurface.m: New files.
	* Source/cairo/GNUmakefile: Add new source file.
	* Source/cairo/CairoContext.m (-initWithContextInfo:,
	-beginPrologueBBox:...title:) Rewrite to support PDF output.
	
2007-09-09 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m (-DPSeofill, -DPSfill, -DPSstroke):
	Clear the GNUstep path after operation.

2007-09-06 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m (-copyWithZone:): Copy dash and clipping.
	* Source/cairo/CairoGState.m (-_setPath:): Clear the cairo path.

2007-09-05 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/x11/XGGeneric.h: Add ivars for event time keeping.
	* Headers/x11/XGServer.h: Declare new event time keeping methods.