@@ -1,3 +1,8 @@
+2007-10-08 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/cairo/CairoFontInfo.m
+	(-appendBezierPathWithGlyphs:count:toBezierPath:):  First implemenation.
+	
 2007-10-07 Fred Kiefer <FredKiefer@gmx.de>
 
 	* Headers/gsc/GSFunction.h: Declare the -getsample:: method in
